--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "^26.3.0",
     "eslint": "^7.6.0",
     "jest": "^26.4.0",
+    "json-server": "^0.16.1",
     "metro-react-native-babel-preset": "^0.62.0",
     "react-test-renderer": "16.13.1"
   },
